--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -48,11 +51,192 @@
     <section class="talk-about">
       <div class="left-side">
         <h1>We will talk about:</h1>
-        <div class="theme first"></div>
-        <div class="theme second"></div>
-        <div class="theme third"></div>
-        <div class="theme fourth"></div>
-        <div class="theme fifth"></div>
+        <div class="theme">
+          <div class="header-theme">
+            <div class="minus-theme"></div>
+            <div class="header-text">
+              <p class="theme-red">Theme 1</p>
+              <p class="blue-par">Aliquet lectus urna viverra in odio.</p>
+            </div>
+          </div>
+          <p class="under">
+            Nulla amet, sagittis potenti rhoncus sit. Elit lectus nec pulvinar aliquet donec enim, ornare. Lacus
+            facilisi curabitur turpis varius mauris. Nisi, tempus risus, odio mi suscipit sed. Curabitur faucibus
+            porttitor quis sem lacus, arcu feugiat facilisis. Commodo nunc orci vitae accumsan id.
+          </p>
+        </div>
+        <div class="theme">
+          <div class="header-theme">
+            <div class="minus-theme"></div>
+            <div class="header-text">
+              <p class="theme-red">Theme 2</p>
+              <p class="blue-par">Aliquet lectus urna viverra in odio.</p>
+            </div>
+          </div>
+        </div>
+        <div class="theme">
+          <div class="header-theme">
+            <div class="minus-theme"></div>
+            <div class="header-text">
+              <p class="theme-red">Theme 3</p>
+              <p class="blue-par">Aliquet lectus urna viverra in odio.</p>
+            </div>
+          </div>
+        </div>
+        <div class="theme">
+          <div class="header-theme">
+            <div class="minus-theme"></div>
+            <div class="header-text">
+              <p class="theme-red">Theme 4</p>
+              <p class="blue-par">Aliquet lectus urna viverra in odio.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right-side">
+        <div class="title-time">
+          <p class="header-title">TIME</p>
+          <p class="red-time">August 5, 11:00 - 14:00</p>
+          <p class="light">Metus turpis sit lorem lacus, in elit tellus lacus.</p>
+        </div>
+        <div class="title-price">
+          <p class="header-title">PRICE</p>
+          <p class="red-time">Free</p>
+          <p class="light">Nulla sem adipiscing adipiscing felis fringilla. Adipiscing mauris quam ac elit tristique
+            dis.</p>
+        </div>
+        <p class="event">Event on Facebook</p>
+        <div class="btn-join">
+          Join the event
+        </div>
+      </div>
+    </section>
+
+    <section class="speaker">
+      <div class="bg-yellow">
+        <div class="img-speaker"></div>
+      </div>
+      <div class="about-speaker">
+        <p class="title-speaker">SPEAKER</p>
+        <h1>Kathryn Murphy</h1>
+        <p class="analyst">Analyst and Marketing specialist in IT company</p>
+        <p class="about-her">
+          Mattis adipiscing aliquam eu proin metus a iaculis faucibus. Tempus curabitur venenatis,
+          vulputate venenatis fermentum ante. Nisl, amet id semper semper quis commodo, consequat. Massa rhoncus sit
+          morbi odio. Sit maecenas nibh consectetur vel diam. Sem vulputate molestie laoreet at massa sed pharetra. Ac
+          commodo platea id habitasse proin. Nullam sit nec ipsum posuere non. Nam vel aliquam tristique sollicitudin
+          interdum quam.
+        </p>
+        <div class="flex-logos">
+          <div class="del"></div>
+          <div class="sentinal"></div>
+          <div class="national"></div>
+        </div>
+        <div class="links">
+          <div class="facebook"></div>
+          <div class="inst"></div>
+          <div class="twitter"></div>
+          <div class="linkedin"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="for-whom">
+      <div class="left-text">
+        <p class="title-speaker">FOR WHOM?</p>
+        <h1>Who will benefit from the event:</h1>
+      </div>
+      <div class="right">
+        <div class="row-check">
+          <div class="logo-check"></div>
+          <p>
+            Specialists with more than 1 year of active work experience
+          </p>
+        </div>
+        <div class="row-check">
+          <div class="logo-check"></div>
+          <p>
+            Mobile app designers who want to improve their skills
+          </p>
+        </div>
+        <div class="row-check">
+          <div class="logo-check"></div>
+          <p>Professional designers who want to feel more confident in UX</p>
+        </div>
+      </div>
+    </section>
+
+    <div class="wrapper-form">
+      <section class="form">
+        <div class="illustration"></div>
+        <div class="do-not-miss">
+          <h1>Don't want to miss the best events?
+            Subscribe to our newsletter!
+          </h1>
+          <div class="input-email">
+            <input type="text" placeholder="Your working email">
+            <div class="btn-sub">Submit</div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <section class="request">
+      <div class="request-form">
+        <p class="title-speaker">DON'T MISS THE EVENT</p>
+        <h1>Leave a request</h1>
+        <form action="">
+          <p>Full Name</p>
+          <input type="text" placeholder="Your full name">
+          <p>Email</p>
+          <input type="email" placeholder="Your work email">
+          <p>Phone</p>
+          <input type="number" placeholder="Your work phone">
+          <div>Join the event</div>
+          <p>* You will receive a link to the online lecture in an email after registration.</p>
+        </form>
+      </div>
+      <div class="man"></div>
+    </section>
+
+    <section class="interested">
+      <div class="wrapper-interests">
+        <p class="title-speaker">Check other online events</p>
+        <h1>You may be interested in</h1>
+        <div class="cards">
+          <div class="card">
+            <p class="red">05 Aug </p>
+            <p class="grey">11:00 - 14:00</p>
+            <p class="about-card">Formation of the organizational structure of the company in the face of uncertainty.
+            </p>
+            <p class="grey bigMargin">Onine master-class</p>
+            <div class="btn-view-more">View more</div>
+          </div>
+          <div class="card">
+            <p class="red">24 Jul </p>
+            <p class="grey">11:00 - 12:30</p>
+            <p class="about-card">
+              Building a customer service department. Best Practices.
+            </p>
+            <p class="grey bigMargin">
+              Onine lecture
+            </p>
+            <div class="btn-view-more">View more</div>
+          </div>
+          <div class="card">
+            <p class="red">10 Jul </p>
+            <p class="grey">9:00 - 14:00</p>
+            <p class="about-card">
+              Find and evaluate: search and assessment tools for candidates.
+            </p>
+            <p class="grey bigMargin">Onine workshop</p>
+            <div class="btn-view-more">View more</div>
+          </div>
+        </div>
+        <div class="more-flex">
+          <h3 class="more">Do you want more?</h3>
+          <div class="explore-btn">Explore all events</div>
+        </div>
       </div>
     </section>
   </main>
